.k8s/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp.api
spec:
  selector:
    matchLabels:
      app: testapp.api 
  template:
    metadata:
      labels:
        app: testapp.api 
    spec:
      containers:
      - name: testapp.api
        image: testapp.api:local
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: testapp.api
spec:
  selector:
    app: testapp.api
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: "80"
  - port: 443
    protocol: TCP
    name: "443"
