.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: $2
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: direct-marketing-local.harley-davidsondigital.com
    http:
      paths:
      - pathType: Prefix 
        #path: "/api"
        path: /api
        backend:
          service:
            name: testapp-api
            port:
              number: 80
      - pathType: Prefix 
        #path: "/api"
        path: "/swagger"
        backend:
          service:
            name: testapp-api
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: testapp-ui
            port: 
              number: 80
#---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: asset-management-ingress
#   namespace: asset-management
#   annotations:
#     kubernetes.io/ingress.class: "PublicIngress"
# spec:
# #  tls:
# #  - hosts:
# #    - myapp.com
# #    secretName: myapp-secret
#  rules:
#    - host: direct-marketing-staging.harley-davidsondigital.com
#      http:
#       paths:
#       - path: /api(/|$)(.*)
#         backend:
#          serviceName: api
#          servicePort: 80
#       - path: /(.*)
#         backend:
#          serviceName: web
#          servicePort: 80
